# flux-ai-terminal

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.ar.md  README.es.md  README.jp.md  README.kr.md  README.md  README.zh.md  build_all.bat
.github/workflows/: ci.yml  main.yml  publish_package.yml
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/dev/fluxai/app/: FluxApp.kt  MainActivity.kt
android-app/app/src/main/java/dev/fluxai/app/bridge/: FluxBridge.kt
android-app/app/src/main/java/dev/fluxai/app/ui/components/: TouchCommandToolbar.kt
android-app/app/src/main/java/dev/fluxai/app/ui/screens/: AiAssistantScreen.kt  FileExplorerScreen.kt  MainScreen.kt  TerminalScreen.kt
android-app/app/src/main/java/dev/fluxai/app/ui/theme/: Color.kt  Theme.kt
android-app/app/src/main/res/values/: strings.xml  themes.xml
assets/fonts/: FONTS.md
core/: Cargo.toml
core/src/: lib.rs
core/src/ai/: autocomplete.rs  mod.rs
core/src/bridge/: mod.rs
core/src/config/: mod.rs
core/src/device/: diagnostics.rs  mod.rs
core/src/emulator/: language_runner.rs  mod.rs  pty.rs  termios.rs
core/src/filesystem/: mod.rs
core/src/gui/: mod.rs  wayland.rs  x11_bridge.rs
core/src/package/: dpkg.rs  mod.rs
core/src/plugins/: mod.rs
core/src/process/: mod.rs
core/src/security/: firewall.rs  keychain.rs  mod.rs  vault.rs
core/src/shell/: mod.rs
core/src/sync/: github.rs  mod.rs
core/src/terminal/: mod.rs  theme.rs
core/src/tools/: mod.rs
docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md  ROADMAP.md
ios-app/FluxAI/Sources/: FluxAIApp.swift
ios-app/FluxAI/Sources/Bridge/: Bridge.swift
ios-app/FluxAI/Sources/Views/: AiAssistantView.swift  ContentView.swift  TerminalView.swift
ios-app/FluxApp/FluxApp/: ContentView.swift  FluxAppApp.swift  FluxBridge.swift
shared-bindings/: Cargo.toml  build.rs
shared-bindings/src/: flux.udl  lib.rs
