[workspace]
members = [
    "core",
    "shared-bindings",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Muhammad Lutfi Muzaki Dev <dev@fluxai.app>"]
license = "MIT"
description = "Flux AI - Portable Linux AI Terminal for Modern Developers"
repository = "https://github.com/muhammadlutfimuzaki/flux"

[workspace.dependencies]
# Core async and serialization
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Heavy Enterprise & Offline Environment dependencies
wasmtime = "18.0" # Massive WebAssembly runtime for plugins
zip = "0.6" # For extracting 100MB+ ubuntu rootfs bundles
image = "0.24" # For processing heavy background images and UI assets
rayon = "1.9" # Heavy parallel processing for the package manager graph

# Cryptography and Security
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto & Security
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# FFI
jni = "0.21"
uniffi = "0.28"

# Terminal
crossterm = "0.28"
vte = "0.13"
portable-pty = "0.8"

# Filesystem
notify = "6.1"
walkdir = "2.5"
tempfile = "3.10"

# Git
git2 = { version = "0.19", default-features = false }

# UUID
uuid = { version = "1.8", features = ["v4"] }

# Chrono
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1.10"

# Channels
flume = "0.11"

# Compression
flate2 = "1.0"
tar = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
