[package]
name = "flux-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core engine for Flux AI Terminal - shell, AI, package manager, filesystem, security"

[lib]
name = "flux_core"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["android"]
android = ["jni"]
ios = []
desktop = []

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
crossterm = { workspace = true }
vte = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
git2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
flume = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
wasmtime = { workspace = true }
zip = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }

# Optional platform deps
jni = { workspace = true, optional = true }

# Internal
once_cell = "1.19"
dirs = "5.0"
nix = { version = "0.29", features = ["signal", "process", "fs"], default-features = false }
bytes = "1.6"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[target.'cfg(target_os = "ios")'.dependencies]

[dev-dependencies]
tokio-test = "0.4"
